# rust_bootcamp

./: .env-server  .gitignore  Cargo.toml  Readme.md  Rust_basics.md  users.json
examples/cli/hello-world/src/: main.rs
examples/server/hello-world/: Cargo.toml
examples/server/hello-world/src/: main.rs
