[package]
name = "rust_bootcamp"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7.9"
clap = { version = "4.5.23", features = ["derive"] }
dialoguer = "0.11.0"
dotenv = "0.15.0"
serde = { version = "1.0.216", features = ["derive"] }
serde_json = "1.0.133"
tokio = { version = "1.42.0", features = ["full"] }
